# notty

./: .gitignore  .pre-commit-config.yaml  Containerfile  README.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: configure.sh  settings.json
.github/workflows/: build.yaml  build.yml  deploy.yml  health_check.yaml  health_check.yml  publish.yaml  release.yaml  release.yml
docs/: ai-system.md  api.md  game-mechanics.md  index.md
notty/: __init__.py  main.py
notty/dev/artifacts/builders/: builder.py
notty/dev/builders/: builder.py
notty/dev/configs/: configs.py
notty/dev/management/: type_checker.py
notty/dev/tests/: mirror_test.py
notty/dev/tools/: type_checker.py
notty/rig/builders/: builder.py
notty/rig/cli/: subcommands.py
notty/rig/configs/: configs.py
notty/rig/tests/: mirror_test.py
notty/rig/tests/fixtures/: fixtures.py
notty/rig/tools/: type_checker.py
notty/src/: computer_action_selection.py  consts.py  player_selection.py  qlearning_agent.py  utils.py
notty/src/visual/: action_board.py  base.py  base_selector.py  card.py  card_selector.py  cards_selector.py  deck.py  game.py  number_selector.py  player.py  player_name_selector.py  player_selector.py  winner_display.py
notty_game/: main.py
notty_game/dev/configs/: configs.py
src/notty/: main.py
src/notty/rig/builders/: builder.py
src/notty/rig/cli/: shared_subcommands.py  subcommands.py
src/notty/rig/configs/: configs.py
src/notty/rig/tests/: mirror_test.py
src/notty/rig/tests/fixtures/: fixtures.py
src/notty/rig/tools/: coverage_tester.py  project_coverage_tester.py  type_checker.py
src/notty/src/: computer_action_selection.py  consts.py  player_selection.py  qlearning_agent.py  utils.py
src/notty/src/visual/: action_board.py  base.py  base_selector.py  card.py  card_selector.py  cards_selector.py  deck.py  game.py  number_selector.py  player_name_selector.py  player_selector.py  winner_display.py
tests/test_notty/: test_main.py
tests/test_notty/test_dev/test_artifacts/test_builder/: test_builder.py
tests/test_notty/test_dev/test_configs/: test_configs.py
tests/test_notty/test_dev/test_tests/: test_mirror_test.py
tests/test_notty/test_rig/test_builders/: test_builder.py
tests/test_notty/test_rig/test_cli/: test_shared_subcommands.py  test_subcommands.py
tests/test_notty/test_rig/test_configs/: test_configs.py
tests/test_notty/test_rig/test_tests/: test_mirror_test.py
tests/test_notty/test_rig/test_tests/test_fixtures/: test_fixtures.py
tests/test_notty/test_rig/test_tools/: test_coverage_tester.py  test_project_coverage_tester.py  test_type_checker.py
tests/test_notty/test_src/: test_computer_action_selection.py  test_player_selection.py  test_qlearning_agent.py  test_utils.py
tests/test_notty/test_src/test_visual/: test_action_board.py  test_base.py  test_card.py  test_card_selector.py  test_cards_selector.py  test_deck.py  test_game.py  test_number_selector.py  test_player.py  test_player_selector.py  test_winner_display.py
tests/test_notty_game/test_dev/test_configs/: test_configs.py
