[project]
name = "notty"
version = "1.1.8"
description = "A simple card game called Notty using Pygame"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "platformdirs>=4.10.0",
    "pygame>=2.6.1",
    "pyrig>=16.0.0",
    "pyrig-runtime>=1.0.0",
]
license-files = [
    "LICENSE",
]
license = "MIT"

[[project.authors]]
name = "Winipedia"

[[project.authors]]
name = "Azeez"

[[project.authors]]
name = "Hanmiao chen"

[[project.maintainers]]
name = "Winipedia"

[project.scripts]
notty = "pyrig_runtime.rig.cli.main:main"

[project.urls]
Homepage = "https://github.com/Winipedia/notty"
Documentation = "https://Winipedia.github.io/notty"
Source = "https://github.com/Winipedia/notty"
Issues = "https://github.com/Winipedia/notty/issues"
Changelog = "https://github.com/Winipedia/notty/releases"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=2.1.0",
    "pillow>=12.3.0",
    "pip-audit>=2.10.1",
    "prek>=0.4.6",
    "pyinstaller>=6.21.0",
    "pyrig>=16.0.0",
    "pyrig-codecov>=2.0.0",
    "pyrig-executables>=2.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "rumdl>=0.2.27",
    "typos>=1.48.0",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=notty --cov-branch --cov-report=term-missing --cov-fail-under=0 --cov-report=xml"

[tool.bandit.assert_used]
skips = [
    "*/tests/*.py",
    "*/test_*/*.py",
]

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
files = "."

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig-runtime",
]

[tool.ty.terminal]
error-on-warning = true
